# ChangeLog for app-editors/emacs-cvs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Oct 2008; Ulrich Mueller <ulm@gentoo.org> +files/emacs-daemon.conf,
  +files/emacs-daemon.rc, metadata.xml, emacs-cvs-23.0.9999.ebuild:
  Install rc support files for USE=daemon.

*emacs-cvs-23.0.9999 (29 Oct 2008)

  29 Oct 2008; Ulrich Mueller <ulm@gentoo.org>
  +files/emacs-cvs-freebsd-sparc-1.patch, +emacs-cvs-23.0.9999.ebuild,
  metadata.xml:
  Copied from Portage tree.
