@@ -1,6 +1,4 @@
 AUX emacs-cvs-freebsd-sparc-1.patch 448 RMD160 4f131b630ec09e1d9170374fc60a1620f0f718e9 SHA1 5bc71be91bb8008cec2473479184e250e5284c68 SHA256 e2c2e53e2995d4a505c480d17e0a7e5abff61ea96c4d3451a1e019c985a59cd8
-AUX emacs-daemon.conf 121 RMD160 54fa96afc172f76d99048a39fdb8940a5ca73a8e SHA1 8b994cc7026ee835f37ab3f79627e8daf2198e51 SHA256 7a9ec630a5e781a03d7e0db05634719419a4b91f6dd09c32864e31d5476c8cb2
-AUX emacs-daemon.rc 974 RMD160 3cff0ec8d15aa3a628a6cbc5893d77f88aa8d1a9 SHA1 7b142731913a5f1e96f7f17eaf714c850731a28f SHA256 9211a0a910c50de59e3353f6ead17054e4a36702f0c4607d92855afefb572022
-EBUILD emacs-cvs-23.0.9999.ebuild 8539 RMD160 f845ad273a1da95bb5fa43b8d6b31d571f5803b9 SHA1 853a4fa7e917fc9c708b8faa0b73570110685035 SHA256 fe84afe6f7aff1bc238a30f21b952dd046c6bc041598e8e3bf957ab92f2144b1
-MISC ChangeLog 506 RMD160 a1311b917c8ab6498918a5f9b9b7aaea8dde4652 SHA1 ca75decaf7cc1141b9ecb527a046c1469e5e9c41 SHA256 e29a2ac252f62e4ff9c352e82f7b3efa4149c222f421c9b73606d7024447429a
-MISC metadata.xml 1703 RMD160 f51be570f25475a1f0228d1c53355dda9cac56e0 SHA1 a0721293b9fe4c6d84fd41def941dd9043846722 SHA256 5e93b2462304eb8c31696d21fac7ae2320efb2075e28d24d1336b3cb1dfd662c
+EBUILD emacs-cvs-23.0.9999.ebuild 8382 RMD160 3587ee2fa54df88b9d98be1e889e8353fb3db6a2 SHA1 496b4f699c11b144e52ed5f2a2af12202f70648a SHA256 e247105dcf4e1b7a3fdca0fa9006ef8ceba410db0ea1d144bc82e545966000da
+MISC ChangeLog 722 RMD160 ceed3d991a477b1d9010af8a254e3209921213b6 SHA1 b726f3cbaea03b9bc8acd655bf1789deadb30d0f SHA256 56bbb8da895d494d1dafda3aa75ff0e36d23f59e0660d041a477b79bc3846247
+MISC metadata.xml 1606 RMD160 f898da13dfc3bdb1636e9ff7bc241997d235498b SHA1 2dea9901bc80a1d91f38628707395d9b4ef0df70 SHA256 f4df95b7db6f7b3375bdd658024520a03a763e75f4ca846ab494609f6094c9bd
