@@ -1,4 +1,0 @@
-# Config file for emacs-daemon
-
-# Space-separated list of users for whom an Emacs daemon should be started
-EMACSUSERS=""
