@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 Oct 2008; Ulrich Mueller <ulm@gentoo.org> -files/emacs-daemon.conf,
+  -files/emacs-daemon.rc, metadata.xml, emacs-cvs-23.0.9999.ebuild:
+  Move daemon support to app-emacs/emacs-daemon to avoid SLOT collisions.
+
   29 Oct 2008; Ulrich Mueller <ulm@gentoo.org> +files/emacs-daemon.conf,
   +files/emacs-daemon.rc, metadata.xml, emacs-cvs-23.0.9999.ebuild:
   Install rc support files for USE=daemon.
